--- a/app/src/main/res/layout/fragment_rv_fragment.xml
+++ b/app/src/main/res/layout/fragment_rv_fragment.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.elkholy.task.rv_fragment"
+    tools:context="com.example.elkholy.task.fragments.rv_fragment"
     android:id="@+id/Fragment">
 
     <!-- TODO: Update blank fragment layout -->
