--- a/app/src/main/res/layout/link.xml
+++ b/app/src/main/res/layout/link.xml
@@ -1,51 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/link_layout">
+    android:id="@+id/link_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
-        android:text="TextView"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
         android:id="@+id/tv_download"
-        android:textAllCaps="true"
-        android:textColor="@android:color/black"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:text="TextView"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_name"
-        android:textSize="18sp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:text="TextView"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black" />
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/tv_download"
-        android:layout_toStartOf="@+id/tv_download" />
+        android:layout_toStartOf="@+id/tv_download"
+        android:text="TextView"
+        android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/tvStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_progress_bar"
-        android:layout_marginTop="33dp"
         android:layout_below="@+id/progressBar"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="33dp"
         android:textSize="18sp" />
 
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:id="@+id/progressBar"
-        android:indeterminate="false"
-           android:visibility="invisible"
-        android:layout_below="@+id/tv_name"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_name"
+        android:layout_marginTop="27dp"
+        android:indeterminate="false"
+        android:visibility="gone" />
 
 </RelativeLayout>
